--- a/question/templates/question/t_er_active_mobile.html
+++ b/question/templates/question/t_er_active_mobile.html
@@ -358,11 +358,19 @@ function initElement()
     {
         var who="me";
         var who_han="我";
-        $(".Profile-followButton").text("编辑个人资料").attr("onclick","profileEdit()");
+        console.log("dddddddd");
+        $(".ProfileEditButton").removeClass("is-hide");
+        $(".ProfileLetterButton").addClass("is-hide");
+        $(".ProfileFollowButton").addClass("is-hide");
     }
     else
     {
-        $(".Profile-followButton").text("关注"+who_han);
+        $(".ProfileEditButton").addClass("is-hide");
+        $(".ProfileLetterButton").removeClass("is-hide");
+        if(g_followed)
+            $(".ProfileFollowButton").removeClass("is-hide Button--blue").addClass("Button--grey").text("已关注").attr("data-followed","true").attr("data-er-id",g_er_id).attr("data-who",who);
+        else
+            $(".ProfileFollowButton").removeClass("is-hide Button--grey").addClass("Button--blue").text("关注"+who_han).attr("data-followed","false").attr("data-er-id",g_er_id).attr("data-who",who);
     }
     $(".who").text(who_han);
     
@@ -437,7 +445,9 @@ function initData()
 function init()
 {
     initData();
-	initElement();  
+	initElement();
+    appendLetterModal();
+    setLetterReceiver(g_er_id,g_er_name);     
 	checkSets();
     if("#edit"==location.hash)
         profileEdit();
@@ -480,7 +490,11 @@ function init()
 <img class="Profile-avatar" src="" alt="">
 <div class="Profile-name"></div>
 <div class="RichText Profile-headline"></div>
-<button class="Profile-followButton" onClick="checkProfileEdit()">编辑个人资料</button>
+<div class="MobileQuestionButtonGroup" style="margin:12px auto;">
+<button class="Button ProfileEditButton Button--primary Button--blue" onClick="profileEdit()">编辑个人资料</button>
+<button class="Button FollowButton ProfileFollowButton Button--primary Button--blue" type="button" data-follow-type="people"></button>
+<button class="Button ProfileLetterButton Button--grey Button--withIcon Button--withLabel" type="button" data-toggle="modal" data-target="#letterModal"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comments Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M11 2c5.571 0 9 4.335 9 8 0 6-6.475 9.764-11.481 8.022-.315-.07-.379-.124-.78.078-1.455.54-2.413.921-3.525 1.122-.483.087-.916-.25-.588-.581 0 0 .677-.417.842-1.904.064-.351-.14-.879-.454-1.171A8.833 8.833 0 0 1 2 10c0-3.87 3.394-8 9-8zm10.14 9.628c.758.988.86 2.009.86 3.15 0 1.195-.619 3.11-1.368 3.938-.209.23-.354.467-.308.722.12 1.073.614 1.501.614 1.501.237.239-.188.562-.537.5-.803-.146-1.495-.42-2.546-.811-.29-.146-.336-.106-.563-.057-2.043.711-4.398.475-6.083-.927 5.965-.524 8.727-3.03 9.93-8.016z" fill-rule="evenodd"></path></svg></span>发私信</button>
+</div>
 <div class="Profile-infos">
 <div class="Profile-infosDes Profile-infosDesEllipsis">
 <span style="display:inline-flex;align-items:center">&#8203;<svg class="Zi Zi--Education" fill="#999" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M12 4L1 7.94v.588l4.153 2.73v5.166C5.158 16.758 8.028 20 12 20c3.972 0 6.808-3.116 6.85-3.576l.006-5.163 4.129-2.733.015-.586L12 4z" fill-rule="evenodd"></path></svg></span>
