--- a/static/common/mobile_main.css
+++ b/static/common/mobile_main.css
@@ -636,5 +636,19 @@ label {
 .zu-noti7-all .day a{color:#259}
 
 
+.pull-left,.note-placeholder{
+    color:#8590a6;
+}
+
+.QuestionAsk-section {
+    margin-bottom: 2px;
+}
+
+.ModalButtonGroup--vertical {
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+
+
 
 
